--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Tauri + Preact + Typescript</title>
 	</head>
 
-	<body>
+	<body class="dark:text-zinc-400 dark:bg-zinc-900 dark:border-zinc-400">
 		<div id="root"></div>
 		<script type="module" src="/src/main.tsx"></script>
 	</body>
